--- a/app/views/registers/_registers.html.erb
+++ b/app/views/registers/_registers.html.erb
@@ -22,7 +22,7 @@
 	<td class="balance_type"><%= register.balance_type %></td>
 	<td class="paid"><%= show_paid_status(register) %></td>
 	<td class="payment_type"><%= register.payment_type %></td>
-	<td class="created_at"><%= register.created_at.strftime("%a, %e %b %Y") %></td>
+	<td class="created_at"><%= format_date(register.created_at) %></td>
 	<td>
 	  <%= link_to t('.edit', :default => t("helpers.links.edit")),
 	      edit_register_path(register), :class => 'btn btn-mini' %>
